--- a/src/index.scss
+++ b/src/index.scss
@@ -17,5 +17,8 @@
     margin: 0 auto;
 }
 
+@import 'assets/styles/blocks/button';
+
 @import 'assets/styles/blocks/header';
 @import 'assets/styles/blocks/nav-menu';
+@import 'assets/styles/blocks/watch-online';
