feat: add section pets, pick-and-feeds

--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -1,4 +1,6 @@
 $green-color: #4B9200;
+$orange-color: #F9804B;
+$orange-color2: #FE9013;
 $orange-hover-color: #E47209;
 $black_blue-color: #333B41;
 $gray-color: #767474;
