--- a/src/assets/styles/blocks/_button.scss
+++ b/src/assets/styles/blocks/_button.scss
@@ -1,7 +1,7 @@
 .button {
     width: 298px;
     height: 54px;
-    @include orang;
+    @include orange;
     border-radius: 25px;
     border: none;
     font-weight: 500;
@@ -9,6 +9,8 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    cursor: pointer;
+    transition: 0,5s all;
     &:hover {
         background: $orange-hover-color;
     }
@@ -17,5 +19,10 @@
     }
     &_disabled {
         background: $gray-color;
+    }
+    &_prev, &_next {
+        width: 62px;
+        height: 62px;
+        border-radius: 50%;
     }
 }
