--- a/src/assets/styles/blocks/_watch-online.scss
+++ b/src/assets/styles/blocks/_watch-online.scss
@@ -6,7 +6,6 @@
         width: 500px;
         margin-left: auto;
         text-align: center;
-
     }
     &__descr {
         position: relative;
@@ -34,7 +33,7 @@
         width: 465px;
         height: 465px;
         border-radius: 50%;
-        @include orang;
+        @include orange;
         z-index: 1;
     }
     &__btn {
