--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,6 @@
 @import 'assets/styles/blocks/header';
 @import 'assets/styles/blocks/nav-menu';
 @import 'assets/styles/blocks/watch-online';
+@import 'assets/styles/blocks/backstage';
+@import 'assets/styles/blocks/pets';
+@import 'assets/styles/blocks/pick-and-feed';
