--- a/src/assets/styles/blocks/_header.scss
+++ b/src/assets/styles/blocks/_header.scss
@@ -16,24 +16,26 @@
         border: 1px solid #FFFFFF;
         border-radius: 2px;
     }
-    &__logo-img {
-        position: absolute;
-        width: 15px;
-        height: 18px;
-        left: 9px;
-        top: 23px;
-    }
     &__title {
+        position:relative;
+        display: block;
         font-weight: 400;
         font-size: 19px;
         line-height: 120%;
         text-align: center;
         color: #FFFFFF;
-        &:hover {
-            color: $orange-hover-color;
+        &::before {
+            content:'';
+            display: block;
+            position: absolute;
+            left: 8px;
+            bottom: 5px;
+            width: 15px;
+            height: 18px;
+            background: url('assets/icons/bamboo.svg') center center/cover no-repeat;
         }
     }
-    &__link {
+    &__logo-link, &__logo-link:visited, &__link, &__link:visited {
         margin-left: auto;
         font-weight: 500;
         font-size: 16px;
@@ -42,5 +44,9 @@
         &:hover {
             color: $orange-hover-color;
         }
+    }
+    &__nav-menu {
+        padding-left: 63px;
+        gap: 58px
     }
 }
