--- a/src/assets/styles/blocks/_pick-and-feed.scss
+++ b/src/assets/styles/blocks/_pick-and-feed.scss
@@ -7,7 +7,6 @@
     &__wrap {
         padding: 41px 0 59px 0;
         min-height: 835px;
-        left: 220px;
         border-radius: 20px;
         background: rgba(253, 253, 255, 0.52);
         backdrop-filter: blur(2px);
@@ -47,8 +46,9 @@
     }
     &__items {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
-        width: 764px;
+        max-width: 764px;
         margin: 0 auto;
         margin-top: 40px;
     }
@@ -84,6 +84,11 @@
     &__item-descr {
         margin-top: 30px;
         line-height: 140%;
+    }
+    &__arrow {
+        margin-top: 64px;
+        width: 69px;
+        height: 35px;        
     }
     &__btn {
         display: block;
