--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,8 @@
 @import 'assets/styles/blocks/button';
 @import 'assets/styles/blocks/slider-range';
 
+
+//page 1
 @import 'assets/styles/blocks/header';
 @import 'assets/styles/blocks/nav-menu';
 @import 'assets/styles/blocks/watch-online';
@@ -35,3 +37,4 @@
     background: url(assets/images/panda_bg.jpg) center (bottom/cover) no-repeat;
 }
 @import 'assets/styles/blocks/donate';
+@import 'assets/styles/blocks/donate-feed-form';
