--- a/src/assets/styles/blocks/_pick-and-feed.scss
+++ b/src/assets/styles/blocks/_pick-and-feed.scss
@@ -94,6 +94,12 @@
         display: block;
         margin: 0 auto;
         margin-top: 62px;
+        a, a:visited {
+            display: block;
+            padding: 18px;
+            color: #FFFFFF;
+            text-decoration: none;
+        }
     }
 
 }
