--- a/src/assets/styles/blocks/_testimonials.scss
+++ b/src/assets/styles/blocks/_testimonials.scss
@@ -13,15 +13,24 @@
         margin-top: 48px;
         gap: 30px;      
     }
-    &__item {
-        padding: 15px 15px 19px 15px;
+    &__item-border-gradient {
         width: 268px;
         height: 391px;
-        border: 2px solid transparent;
         @include pink_gradient;
-        box-shadow: inset 0px 0px 0px 100vw $light_grayl-color; 
         border-radius: 20px;
-        overflow: hidden;
+        padding: 2px;
+        // border: 2px solid transparent;
+        // @include pink_gradient;
+        // box-shadow: inset 0px 0px 0px 100vw $light_grayl-color; 
+        // border-radius: 20px;
+        // overflow: hidden;
+        }
+    &__item {
+        width: 100%;
+        height: 100%;
+        background: $light_grayl-color;
+        border-radius: 20px;
+        padding: 15px 13px 19px 13px;
     }
     &__item-header {
         display: flex;
@@ -41,7 +50,7 @@
             color: #000000;
         }
     }
-    &__item-descr {
+    &__item-comment {
         margin-top: 10px;
         font-weight: 300;
         font-size: 15px;
