--- a/src/assets/styles/blocks/_donate-feed-form.scss
+++ b/src/assets/styles/blocks/_donate-feed-form.scss
@@ -1,12 +1,7 @@
 //* Amount slider
 
 $number-of-options: 8;
-// .form-wrapper {
-// 	width: 100%;
-// 	display: flex;
-// 	flex-direction: column;
-//     align-items: center;
-// }
+
 .form-amount {
 	display: flex;
 	flex-direction: column;
@@ -62,15 +57,12 @@ $number-of-options: 8;
 				font-size: 26px;
                 font-weight: 400;
                 color: $black_blue-color;
-				// white-space: nowrap;
-				// opacity: 0.85;
-				// transition: all 0.15s ease-in-out;
 			}
 			&::after {
                 // маркеры
 				content: " "; 
 				position: absolute;
-				left: 50%;
+				left: 50%;///
 				top: 50%;
 				transform: translate(-50%, -50%);
 				width: 10px;
@@ -86,8 +78,6 @@ $number-of-options: 8;
 			&:hover::after {
                 transform: translate(-50%, -50%) scale(1.25);
                 background: $orange-color2;
-                
-                
 			}
 		}
 		input {
@@ -105,14 +95,6 @@ $number-of-options: 8;
                     outline: solid 2px $orange-color2;
                     outline-offset: 15px;
                     transform: translate(-50%, -50%) scale(1);                    
-				}
-				~ #debt-amount-pos {
-					opacity: 1;
-				}
-				@for $i from 1 through $number-of-options {
-					&:nth-child(#{$i * 2 - 1}) ~ #debt-amount-pos {
-						left: #{($i * 20%) - 10%};
-					}
 				}
 			}
 		}
@@ -135,41 +117,41 @@ $number-of-options: 8;
 		.debt-amount-slider {
 			input {
 				+ label::before {
-					transform: translate(-50%, 45px) scale(0.9);
+					// transform: translate(-50%, 45px) scale(0.9);
 					transition: all 0.15s linear;
 				}
 				&:checked + label::before {
-					transform: translate(-50%, 45px) scale(1.1);
+					// transform: translate(-50%, 45px) scale(1.1);
 					transition: all 0.15s linear;
 				}
 			}
 		}
 	}
-	& + button {
-		display: block;
-		position: relative;
-		margin: 56px auto 0;
-		padding: 10px 20px;
-		appearance: none;
-		transition: all 0.15s ease-in-out;
-        &:hover {
-            background: #000;
-			color: #fff;
-			&:active {
-				transform: scale(0.9);
-			}
-		}
-    }
-	&:invalid + button {
-		pointer-events: none; //кнопка не активна
-		opacity: 0.4;
-	}
+	// & + button {
+	// 	display: block;
+	// 	position: relative;
+	// 	margin: 56px auto 0;
+	// 	padding: 10px 20px;
+	// 	appearance: none;
+	// 	transition: all 0.15s ease-in-out;
+    //     &:hover {
+    //         background: #000;
+	// 		color: #fff;
+	// 		&:active {
+	// 			transform: scale(0.9);
+	// 		}
+	// 	}
+    // }
+	// &:invalid + button {
+	// 	pointer-events: none; //кнопка не активна
+	// 	opacity: 0.4;
+	// }
 }
 
 //* Another amount
 .donate-another-amount {
     position: relative;
-    margin-top: 92px;
+    margin-top: 98px;
     display: flex;
     flex-direction: column;
     width: 268px;
@@ -220,7 +202,7 @@ $number-of-options: 8;
     padding: 25px; //зона нажатия на кнопку
 	cursor: pointer;
     transition: background .2s ease;
-    margin: 8px 0;
+    margin: 3px 0;
     -webkit-tap-highlight-color: transparent; 
     input {
         vertical-align: middle;
@@ -246,22 +228,18 @@ $number-of-options: 8;
         display: inline-block;
         font-weight: 400;
         font-size: 16px;
-        line-height: 140%;
-        color: #333B41;
+		color: #333B41;
         line-height: 20px;
-        padding: 0 8px; 
+        padding: 0 4px; 
     }
     span:checked {
         vertical-align: middle;
         display: inline-block;
         font-weight: 400;
         font-size: 45px;
-        line-height: 140%;
-        color: yellow;
+		color: yellow;
         line-height: 20px;
         padding: 0 8px; 
     }
 }
-
-
 
