feat: landing page media

--- a/src/assets/styles/blocks/_footer.scss
+++ b/src/assets/styles/blocks/_footer.scss
@@ -106,7 +106,7 @@
         background-color: transparent;
         width: 228px;
         border-radius: 1px;
-        border: 1px solid $black_blue-color;
+        border: 1px solid $orange-color2;
         padding: 10px;
         box-sizing: border-box;
         font-weight: 400;
