--- a/src/index.scss
+++ b/src/index.scss
@@ -38,3 +38,7 @@
 }
 @import 'assets/styles/blocks/donate';
 @import 'assets/styles/blocks/donate-feed-form';
+
+//media
+
+@import 'assets/styles/blocks/media';
