--- a/src/assets/styles/blocks/_media.scss
+++ b/src/assets/styles/blocks/_media.scss
@@ -1,5 +1,68 @@
+@media (min-width: 1001px) and (max-width: 1599px) {
+    .container {
+        max-width: 100%;
+        padding: 0 30px;
+    }
+    .backstage {
+        background: url(assets/images/flower_foto1.png) right -39px top 20px/170px auto no-repeat;
+    }
+    .backstage__wrap {
+        width: 90%;
+    }
+    .backstage__img {
+        height: auto;
+        width: 40vw;
+    }
+    .backstage__descr {
+        width: 50vw;
+        margin-left: 30px;
+    }
+    .pets {
+        min-height: 1126px;
+        padding: 51px 0 100px 0;
+        background: url(assets/images/palm_foto_2.png) left -8px (bottom/auto 202px) no-repeat,
+        url(assets/images/strelitzia1.png) right -8px (bottom/241px 180px) no-repeat;
+        &__items-wrap {
+            width: 100%;
+            height: 801px;
+            overflow: hidden;
+        }
+        &__items {
+            row-gap: 92px;
+            column-gap: 29px;
+            }
+        &__item {
+            width: 294px;
+            height: 354px;
+        }
+        &__photo {
+            width: calc(294px - 4px);
+            height: calc(294px - 2px);
+        }
+        &__btn-prev {
+            left: 323px;
+        }
+        &__btn-next {
+            right: 323px;
+        }
+    }
+    .testimonials__items-wrap {
+        margin: 0 auto;
+        margin-top: 48px;
+        width: 80%;
+        height: 391px;
+        overflow: hidden;
+    }
+    .footer__nav {
+        grid-column: 1/3;
+        justify-self: end;
+    }
+}
+
+
+
 //* small_desktop 1000px
-@media (max-width: 1599px) {
+@media (max-width: 1000px) {
     .container {
         position: relative;
         max-width: 940px;
@@ -61,7 +124,7 @@
         min-height: 1126px;
         padding: 51px 0 100px 0;
         background: url(assets/images/palm_foto_2.png) left -8px (bottom/auto 202px) no-repeat,
-        url(assets/images/strelitzia1.png) right -8px (bottom/241px 180px) no-repeat;//
+        url(assets/images/strelitzia1.png) right -8px (bottom/241px 180px) no-repeat;
         &__items-wrap {
             width: 100%;
             height: 801px;
@@ -237,7 +300,6 @@
         }
     }
 }
-
 
 //* tablet 640px
 @media (max-width: 999px) {
