--- a/src/assets/styles/blocks/_media.scss
+++ b/src/assets/styles/blocks/_media.scss
@@ -339,6 +339,7 @@
         transform: translateY(-50%);
         width: 20px;
         height: 15px;
+        z-index: 10;
         cursor: pointer;
         span {
             display: block;
@@ -363,6 +364,19 @@
                 }
         }
     }
+    // .header__hamburger {
+    //     display: flex;
+    //     //position: fixed;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     z-index: 10;
+    //     background-color: black;
+        
+
+
+    // }
     .watch-online {
         min-height: 373px;
         background: url(assets/images/giant-panda_tablet.jpg) center (bottom/cover) no-repeat;//
@@ -586,6 +600,9 @@
     .container {
         max-width: 100%;
         padding: 0 30px;
+    }
+    .watch-online__btn {
+        left: 20px;
     }
     .page2-bg {
         height: 369px;
@@ -945,6 +962,9 @@
     .container {
         max-width: 100%;
         padding: 0 30px;
+    }
+    .watch-online__btn {
+        left: 10px;
     }
     .hamburger {
         right: 20px;
