--- a/src/assets/styles/blocks/_media.scss
+++ b/src/assets/styles/blocks/_media.scss
@@ -372,29 +372,29 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100vh;
-        background-color: rgba(255, 255, 255, 0.95);
-        transition: 0.5s all;
+        height: 329px;
+        background-color: rgba(255, 255, 255, 1);
+        transition: 0.3s all;
         .container {
-            margin-left: 10px;
+            margin-left: 0px;
         }
         .logo {
-            width: 82px;
-            height: 52px;
+            width: 65.5px;
+            height:41.5px;
             border: 1px solid $orange-color2;
             .header__title {
-                font-size: 19px;
+                font-size: 15px;
                 color: $orange-color2;
                 &::before {
-                    left: 8px;
-                    bottom: 5px;
-                    background: url('assets/icons/bamboo_color.svg') center center/cover no-repeat;
+                    left: 5px;
+                    bottom: 3px;
+                    background: url('assets/icons/bamboo_color.svg') center center/9px auto no-repeat;
                 }
             }
         }
         .header__wrap {
-            margin-top: 13px;
-            margin-left: 13px;
+            margin-top: 10px;
+            margin-left: 10px;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -424,6 +424,7 @@
             }
         }
         .header__link {
+            margin: 0;
             margin-top: 15px;
             display: block;
             font-weight: 400;
