--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,9 @@ body {
 .hamburger {
     display: none;
 }
+.js__hidden {
+    display: none;
+}
 
 @import 'assets/styles/blocks/button';
 @import 'assets/styles/blocks/slider-range';
