--- a/src/assets/styles/blocks/_slider-range.scss
+++ b/src/assets/styles/blocks/_slider-range.scss
@@ -24,7 +24,7 @@
     }
     &::-webkit-slider-thumb {
         height: 6px;
-        width: 115px;
+        width: 12.5%;
         border-radius: 5px;
         background: $orange-color2;
         cursor: pointer;
